<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.lab8mobile.ViewCardFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/WidthimageViewAddCard"
        android:layout_height="@dimen/HeightimageViewAddCard"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/button"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_edit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:text="@string/Question"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/questionField"
        android:layout_width="153dp"
        android:layout_height="94dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/exampleField"
        android:layout_width="153dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/example"
        app:layout_constraintTop_toBottomOf="@+id/questionField" />

    <TextView
        android:id="@+id/example"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="80dp"
        android:text="@string/Help"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/answerView"
        android:layout_width="154dp"
        android:layout_height="17dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/answer"
        app:layout_constraintTop_toBottomOf="@+id/exampleField" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="46dp"
        android:layout_height="20dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:text="@string/Answer"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/example" />

    <TextView
        android:id="@+id/translate"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:text="@string/Translate"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <TextView
        android:id="@+id/translateView"
        android:layout_width="152dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/translate"
        app:layout_constraintTop_toBottomOf="@+id/answerView" />

</androidx.constraintlayout.widget.ConstraintLayout>